Timer: add option for custom backgrounds

--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -25,7 +25,7 @@
 			말모이 <a href="manuri.swin">아롬(파일) 하나</a> <a href="anhen.swin">아롬 둘</a> <a href="yemat.swin">아롬 셋</a> <br>
 			화살 오른쪽 다듬은말은 모두 맨우리말이며 [] 안에 다듬은 보기로 실은 섞인말 몇을 빼면 한자, 깊들온말(귀화어), 들온말은 하나도 없습니다. <br>
 			움직씨와 그림씨 가운데 "하다", "되다"로 끝나면서 네글씨보다 긴 것은 "하다", "되다"를 쓰지 않았습니다.<br>
-			띄어썼을 때 읽기 쉬워지는 말이 아니면 굳이 띄어쓰지 않았습니다. <br>
+			띄어써서 읽기 쉬워지는 말이 아니면 굳이 띄어쓰지 않았습니다. <br>
 			쉼을 쓰면 여러 말을 함께 찾습니다. 보기: 함께,찾다 <br>
 			큰따옴을 쓰면 똑같은 말만 찾습니다. 보기: "동" <br>
 			모든 낱말을 보려면 아무것도 넣지 말고 찾기를 누르세요. <br>
